@@ -34,6 +34,8 @@ buffers show whitespace option is turned on.
 +Fix Select All not working in search bar.
 +Fix issue during shutdown when IPC server isn't running.
 +Fix loading custom key profiles that have duplicate entries.
++Fix handling the toggling of Maximize/Restore editor for some workflows so that
+the view is correctly toggled back and forth for all cases.
 
 #-----------------------------------------------------------------------------#
 
